version/0.31/_sources/api/solver/_autosummary/settings/repair_wall_distance.rst.txt
:orphan:

.. _repair_wall_distance:

repair_wall_distance
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.repair_wall_distance
    :show-inheritance:

.. rubric:: Arguments

========================   ===================

Argument                               Summary

========================   ===================
:ref:`repair <repair_1>`       'repair' child.

========================   ===================

.. rubric:: Included in:

======================================   ==========================================

Parent                                                                      Summary

======================================   ==========================================
:ref:`repair_improve <repair_improve>`       The repair and improve quality object.

======================================   ==========================================

