version/0.41/_sources/api/solver/_autosummary/settings/repair_wall_distance.rst.txt
:orphan:

.. _repair_wall_distance:

repair_wall_distance
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.repair_wall_distance
    :show-inheritance:

.. rubric:: Arguments

========================   ==============================================================================================

Argument                                                                                                          Summary

========================   ==============================================================================================
:ref:`repair <repair_2>`       Enable/disable wall distance repair at very high aspect ratio hexahedral/polyhedral cells.

========================   ==============================================================================================

.. rubric:: Included in:

======================================   ==========================================

Parent                                                                      Summary

======================================   ==========================================
:ref:`repair_improve <repair_improve>`       The repair and improve quality object.

======================================   ==========================================

